# openinfer

./: Cargo.toml
docs/: index.md
docs/playbooks/: profiling-guide.md
openinfer-deepseek-v2-lite/tests/: e2e_ep2.rs
openinfer-kernels/: build.rs
openinfer-qwen3-4b/src/: executor.rs  lib.rs  scheduler.rs  unified_forward.rs  weights.rs
openinfer-qwen3-4b/tests/: kv_offload_cpu_hit.rs  lora_smoke.rs
openinfer-qwen35-4b/src/: scheduler.rs
openinfer-server/src/: config.rs  main.rs
pegainfer-core/src/: cuda_graph.rs
pegainfer-deepseek-v2-lite/src/: lib.rs  runtime.rs
pegainfer-deepseek-v4/: Cargo.toml
pegainfer-kernels/: Cargo.toml  KERNELS.md  build.rs
pegainfer-kernels/csrc/: argmax.cu  elementwise.cu  flashinfer_top1.cu  linear.cu
pegainfer-kernels/csrc/deepseek_v4/: deepseek_compressor.cu  deepseek_indexer.cu
pegainfer-kernels/csrc/kimi_k2/: kimi_experts.cu  kimi_marlin_int4.cu  kimi_marlin_wna16.cu  kimi_mla.cu  kimi_mla_cublaslt.cu  kimi_o_proj.cu  kimi_router.cu  kimi_shared_gate_up.cu
pegainfer-kernels/csrc/kimi_k2/vllm_marlin/core/: scalar_type.hpp
pegainfer-kernels/csrc/kimi_k2/vllm_marlin/moe/marlin_moe_wna16/: marlin_template.h
pegainfer-kernels/csrc/kimi_k2/vllm_marlin/quantization/gptq_marlin/: marlin.cuh
pegainfer-kernels/csrc/kimi_k2/vllm_marlin/quantization/marlin/: marlin.cuh
pegainfer-kernels/src/: ffi.rs  ops.rs  typed_ops.rs
pegainfer-kernels/src/ops/: attention.rs  elementwise.rs  kimi_experts.rs  kimi_k2.rs  kimi_mla.rs  kimi_router.rs  linear.rs  sampling.rs
pegainfer-kernels/src/ops/kimi_k2/: experts.rs  o_proj.rs  router.rs  shared_gate_up.rs
pegainfer-kernels/tests/: deepseek_cutedsl_indexer.rs  deepseek_indexer_topk.rs
pegainfer-kernels/tools/cutedsl/deepseek_v4/: generate.py
pegainfer-kernels/tools/kimi_k2/: compare_logits_fixture.py  compare_vllm_topk_fixture.py  hf_logits_reference.py  kimi_k25_parity_prompts.json  torch_reference.py  vllm_logits_reference.py  vllm_marlin_wna16_reference.py
pegainfer-kimi-k2/: Cargo.toml
pegainfer-kimi-k2/src/: batch_decode_trace.rs  collectives.rs  config.rs  kernel_report.rs  layers.rs  lib.rs  runner.rs  tensor.rs  tokenizer.rs  typed_scratch.rs  weights.rs
pegainfer-kimi-k2/src/layers/: attention.rs  dense.rs  experts.rs  router.rs
pegainfer-kimi-k2/src/runner/: affinity.rs  config.rs  executor.rs  moe_pplx.rs  scheduler.rs  worker.rs
pegainfer-kimi-k2/src/runner/executor/: tp1_dp8.rs  tp8_dp1.rs
pegainfer-kimi-k2/src/runner/scheduler/: dp.rs
pegainfer-kimi-k2/src/runner/worker/: cache.rs  forward.rs  runtime.rs  state.rs
pegainfer-kimi-k2/src/weights/: context.rs  load.rs  manifest.rs  package.rs  tests.rs
pegainfer-kimi-k2/tests/: vllm_golden_gate.rs
pegainfer-server/: Cargo.toml
test_data/: deepseek-v2-lite-ep2-cases.json  kimi-k2.6-vllm-golden.safetensors
tools/: nsys_tail_stats.py
(+26 files in other folders)
