[package]
name = "pegainfer-kernels"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[features]
default = []
deepseek-v4 = []
deepseek-v4-cutedsl-diagnostic = ["deepseek-v4"]

[lints]
workspace = true
