[package]
name = "pegainfer-kimi-k2"
version = "0.1.0"
edition = "2024"
autobenches = false
autobins = false
autotests = false

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
cudarc = { workspace = true, features = ["nccl"] }
half = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
pegainfer-bench = { workspace = true }
pegainfer-comm = { workspace = true, optional = true }
pegainfer-core = { workspace = true }
pegainfer-kernels = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
default = []
kimi-k2 = ["pegainfer-kernels/kimi-k2", "dep:pegainfer-comm"]
kernel-call-trace = ["pegainfer-core/kernel-call-trace"]
kernel-report = [
    "dep:clap",
    "kimi-k2",
    "kernel-call-trace",
]

[[test]]
name = "vllm_golden_gate"
path = "tests/vllm_golden_gate.rs"
required-features = ["kimi-k2"]

[[bin]]
name = "kimi_kernel_report"
path = "src/bin/kimi_kernel_report.rs"
required-features = ["kernel-report"]

[[bin]]
name = "kimi_model_report"
path = "src/bin/kimi_model_report.rs"
required-features = ["kernel-report"]

[lints]
workspace = true
